--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
+    "axios": "^0.27.2",
     "react": "18.0.0",
     "react-native": "0.69.3",
+    "react-native-permissions": "^3.6.0",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
     "react-native-vector-icons": "^9.2.0",
